# tendril

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md
.agents/decisions/: index.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: quality-gate.yml  release.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
docs/: agency-tooling-spec.md  agent-capability-spec.md  tendril-project-brief-addendum.md  tendril-project-brief.md
docs/archaiv-protocol/: Cargo.toml  README.md
docs/archaiv-protocol/src/: adapter.rs  lib.rs  messages.rs  ndjson.rs  session.rs  sink.rs
specs/001-tendril-tauri-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ci-workflows-templates/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-code-review-remediation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-multi-provider-support/: data-model.md  plan.md  (+4 more)
tendril-agent/: README.md  package-lock.json  package.json  sea-config.json
tendril-agent-launcher/: Cargo.toml
tendril-ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
tendril-ui/src-tauri/: Cargo.toml  tauri.conf.json
tendril-ui/src-tauri/capabilities/: default.json
tendril-ui/src-tauri/icons/: icon.icns
tendril-ui/src-tauri/src/: acp.rs  capabilities.rs  config.rs  events.rs  files.rs  lib.rs  main.rs  workspace.rs
(+63 files in other folders)
