[package]
name = "archaiv-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JSON-RPC 2.0 over NDJSON sidecar protocol for event-driven subprocess communication"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util", "sync"] }
thiserror = "2"
