[package]
name = "tendril-ui"
version = "0.1.0"
edition = "2021"

[lib]
name = "tendril_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-stronghold = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "fs", "time"] }
dirs = "6"

[profile.dev.package.scrypt]
opt-level = 3
